--- a/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
@@ -13,7 +13,7 @@
         android:layout_height="53dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -22,7 +22,7 @@
         android:paddingStart="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
         app:layout_constraintStart_toStartOf="@+id/passwordSingField"
@@ -35,7 +35,7 @@
         android:layout_height="53dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -44,7 +44,7 @@
         android:paddingStart="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
         app:layout_constraintStart_toStartOf="@+id/userSingField"
@@ -58,7 +58,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -67,7 +67,7 @@
         android:paddingStart="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.83"
