--- a/KetchUPClient/app/src/main/res/layout-land-night/settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/settings_screen.xml
@@ -4,23 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/dark_color"
     android:padding="@dimen/_8sdp">
 
     <EditText
         android:id="@+id/repeatNewPassField"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="53dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/patua_one"
         android:hint="Please repeat your new password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
-        android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
+        android:textColorHint="#4A4A4A"
         app:layout_constraintEnd_toEndOf="@+id/newPassField"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/newPassField"
@@ -29,19 +30,19 @@
 
     <EditText
         android:id="@+id/newPassField"
-        android:layout_width="350dp"
+        android:layout_width="0dp"
         android:layout_height="53dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/patua_one"
         android:hint="Please type the new password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
-        android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
+        android:textColorHint="#4A4A4A"
         app:layout_constraintEnd_toEndOf="@+id/actualPassField"
         app:layout_constraintStart_toStartOf="@+id/actualPassField"
         app:layout_constraintTop_toBottomOf="@+id/actualPassField"
@@ -49,10 +50,10 @@
 
     <EditText
         android:id="@+id/actualPassField"
-        android:layout_width="350dp"
+        android:layout_width="340dp"
         android:layout_height="53dp"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -72,10 +73,10 @@
         android:id="@+id/actualPassText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/patua_one"
         android:text="Here you can change the password"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_13sdp"
         app:layout_constraintStart_toStartOf="@+id/passwordText"
         app:layout_constraintTop_toBottomOf="@+id/passwordText" />
@@ -84,10 +85,10 @@
         android:id="@+id/profileText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="@font/patua_one"
         android:text="Profile"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_20sdp"
         app:layout_constraintEnd_toEndOf="@+id/settingsText"
         app:layout_constraintHorizontal_bias="0.0"
@@ -101,7 +102,7 @@
         android:layout_marginTop="25dp"
         android:fontFamily="@font/patua_one"
         android:text="Status"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_13sdp"
         app:layout_constraintEnd_toEndOf="@+id/changeStatus"
         app:layout_constraintStart_toStartOf="@+id/changeStatus"
@@ -111,10 +112,9 @@
         android:id="@+id/nameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:fontFamily="@font/patua_one"
         android:text="Name"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_13sdp"
         app:layout_constraintEnd_toEndOf="@+id/changeName"
         app:layout_constraintHorizontal_bias="0.502"
@@ -156,7 +156,7 @@
 
     <EditText
         android:id="@+id/changeName"
-        android:layout_width="210dp"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
@@ -167,11 +167,10 @@
         android:maxLines="1"
         android:text=""
         android:textAlignment="textStart"
-        android:textColor="#676767"
+        android:textColor="#C8C7C7"
         android:textColorHint="#B1B1B1"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="@id/ViewSupp"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/ViewSupp"
         app:layout_constraintTop_toBottomOf="@+id/nameText"
         app:layout_constraintVertical_bias="0.0"
@@ -179,7 +178,7 @@
 
     <EditText
         android:id="@+id/changeStatus"
-        android:layout_width="210dp"
+        android:layout_width="230dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ellipsize="end"
@@ -189,10 +188,9 @@
         android:maxLines="1"
         android:text=""
         android:textAlignment="textStart"
-        android:textColor="#676767"
+        android:textColor="#C8C7C7"
         android:textColorHint="#9F9F9F"
         android:textSize="@dimen/_16sdp"
-        app:layout_constraintEnd_toEndOf="@+id/changeName"
         app:layout_constraintStart_toStartOf="@+id/changeName"
         app:layout_constraintTop_toBottomOf="@+id/statusText"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -201,11 +199,10 @@
         android:id="@+id/settingsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
         android:fontFamily="@font/patua_one"
         android:text="@string/settingText"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_25sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -214,21 +211,21 @@
         android:id="@+id/passwordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="47dp"
+        android:layout_marginStart="400dp"
+        android:layout_marginEnd="230dp"
         android:fontFamily="@font/patua_one"
         android:text="Password"
-        android:textColor="@color/dark_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/_20sdp"
-        app:layout_constraintEnd_toEndOf="@+id/settingsText"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/settingsText"
-        app:layout_constraintTop_toBottomOf="@+id/changePFP" />
+        app:layout_constraintTop_toTopOf="@+id/settingsText" />
 
     <Button
         android:id="@+id/applyButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginTop="5dp"
         android:backgroundTint="#EF5252"
         android:fontFamily="@font/patua_one"
         android:text="Apply changes"
@@ -236,10 +233,11 @@
         android:textSize="@dimen/_10sdp"
         app:iconTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/changeStatus"
-        app:layout_constraintStart_toStartOf="@+id/changePFP"
+        app:layout_constraintEnd_toEndOf="@+id/repeatNewPassField"
+        app:layout_constraintStart_toStartOf="@+id/repeatNewPassField"
         app:layout_constraintTop_toBottomOf="@+id/repeatNewPassField"
         tools:ignore="TextContrastCheck" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
