--- a/KetchUPClient/app/src/main/res/layout-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/activity_register_screen.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -21,7 +21,7 @@
         android:paddingStart="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/passwordSingField"
@@ -33,7 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/password_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -42,7 +42,7 @@
         android:paddingStart="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
         app:layout_constraintEnd_toEndOf="@+id/userSingField"
         app:layout_constraintHorizontal_bias="0.0"
@@ -56,7 +56,7 @@
         android:layout_height="57dp"
         android:layout_marginTop="120dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawableStart="@drawable/username_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
@@ -65,7 +65,7 @@
         android:paddingStart="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
         app:layout_constraintEnd_toEndOf="@+id/singnupText"
         app:layout_constraintHorizontal_bias="0.0"
