Fixed UI for Samsung devices

--- a/KetchUPClient/app/src/main/res/layout-land/settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land/settings_screen.xml
@@ -19,7 +19,7 @@
         android:hint="Please repeat your new password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/dark_color"
         android:textColorHint="#4A4A4A"
         app:layout_constraintEnd_toEndOf="@+id/newPassField"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,7 +40,7 @@
         android:hint="Please type the new password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/dark_color"
         android:textColorHint="#4A4A4A"
         app:layout_constraintEnd_toEndOf="@+id/actualPassField"
         app:layout_constraintStart_toStartOf="@+id/actualPassField"
@@ -60,7 +60,7 @@
         android:hint="Please type your actual password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/dark_color"
         android:textColorHint="#4A4A4A"
         app:layout_constraintEnd_toEndOf="@+id/actualPassText"
         app:layout_constraintHorizontal_bias="0.0"
@@ -223,7 +223,7 @@
 
     <Button
         android:id="@+id/applyButton"
-        android:layout_width="150dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:backgroundTint="#EF5252"
