--- a/KetchUPClient/app/src/main/res/layout-port-night/settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/settings_screen.xml
@@ -15,17 +15,16 @@
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:drawableStart="@drawable/lock_icon_ligh"
         android:drawablePadding="10dp"
         android:ems="10"
+        android:fontFamily="@font/patua_one"
         android:hint="Please repeat your new password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
-        android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
+        android:textColorHint="#FFAFAFAF"
         app:layout_constraintEnd_toEndOf="@+id/newPassField"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/newPassField"
         app:layout_constraintTop_toBottomOf="@+id/newPassField"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -36,13 +35,13 @@
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:drawableStart="@drawable/lock_icon_ligh"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Please type the new password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#FFAFAFAF"
         android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/actualPassField"
@@ -56,7 +55,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
         android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:drawableStart="@drawable/lock_icon_ligh"
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/patua_one"
@@ -64,10 +63,9 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColor="@color/white"
-        android:textColorHint="#4A4A4A"
-        app:layout_constraintEnd_toEndOf="@+id/actualPassText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/actualPassText"
+        android:textColorHint="#FFAFAFAF"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actualPassText"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
@@ -80,7 +78,9 @@
         android:text="Here you can change the password"
         android:textColor="@color/white"
         android:textSize="@dimen/_13sdp"
-        app:layout_constraintStart_toStartOf="@+id/passwordText"
+        app:layout_constraintEnd_toEndOf="@+id/actualPassField"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/actualPassField"
         app:layout_constraintTop_toBottomOf="@+id/passwordText" />
 
     <TextView
@@ -132,6 +132,7 @@
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="@id/changeStatus"
         app:layout_constraintEnd_toEndOf="@+id/settingsText"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/settingsText"
         app:layout_constraintTop_toBottomOf="@+id/nameText"
         app:riv_mutate_background="true"
@@ -174,7 +175,7 @@
         android:textColorHint="#B1B1B1"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="@id/ViewSupp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/actualPassField"
         app:layout_constraintStart_toEndOf="@id/ViewSupp"
         app:layout_constraintTop_toBottomOf="@+id/nameText"
         app:layout_constraintVertical_bias="0.0"
@@ -195,7 +196,7 @@
         android:textColor="#C8C7C7"
         android:textColorHint="#9F9F9F"
         android:textSize="@dimen/_16sdp"
-        app:layout_constraintEnd_toEndOf="@+id/changeName"
+        app:layout_constraintEnd_toEndOf="@+id/actualPassField"
         app:layout_constraintStart_toStartOf="@+id/changeName"
         app:layout_constraintTop_toBottomOf="@+id/statusText"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -205,7 +206,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/patua_one"
         android:text="@string/settingText"
         android:textColor="@color/white"
@@ -222,25 +223,26 @@
         android:text="Password"
         android:textColor="@color/white"
         android:textSize="@dimen/_20sdp"
-        app:layout_constraintEnd_toEndOf="@+id/settingsText"
-        app:layout_constraintStart_toStartOf="@+id/settingsText"
+        app:layout_constraintEnd_toEndOf="@+id/actualPassText"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/actualPassText"
         app:layout_constraintTop_toBottomOf="@+id/changePFP" />
 
     <Button
         android:id="@+id/applyButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="30dp"
         android:backgroundTint="#EF5252"
         android:fontFamily="@font/patua_one"
         android:text="Apply changes"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="@dimen/_10sdp"
         app:iconTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/changeStatus"
-        app:layout_constraintStart_toStartOf="@+id/changePFP"
+        app:layout_constraintEnd_toEndOf="@+id/repeatNewPassField"
+        app:layout_constraintStart_toStartOf="@+id/repeatNewPassField"
         app:layout_constraintTop_toBottomOf="@+id/repeatNewPassField"
         tools:ignore="TextContrastCheck" />
 
