--- a/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
@@ -14,15 +14,15 @@
         android:layout_marginTop="20dp"
         android:autofillHints=""
         android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:drawableStart="@drawable/lock_icon_ligh"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#FFAFAFAF"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="@+id/usernameText"
         app:layout_constraintHorizontal_bias="0.2"
@@ -37,15 +37,15 @@
         android:layout_marginTop="100dp"
         android:autofillHints=""
         android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/username_icon_light"
+        android:drawableStart="@drawable/user_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Username"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#FFAFAFAF"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.84"
         app:layout_constraintStart_toStartOf="parent"
