--- a/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/login_screen.xml
@@ -33,14 +33,14 @@
         android:layout_marginBottom="10dp"
         android:autofillHints=""
         android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/username_icon_light"
+        android:drawableStart="@drawable/user_icon_light"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Username"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="#4A4A4A"
+        android:textColor="@color/white"
+        android:textColorHint="#AFAFAF"
         android:fontFamily="@font/patua_one"
         app:layout_constraintBottom_toTopOf="@+id/passwordField"
         app:layout_constraintEnd_toEndOf="@+id/welcomeText"
@@ -54,13 +54,13 @@
         android:layout_height="53dp"
         android:autofillHints=""
         android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:drawableStart="@drawable/lock_icon_ligh"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#FFAFAFAF"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:inputType="textPassword"
         android:paddingStart="10dp"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
