--- a/KetchUPClient/app/src/main/res/layout-port-night/chat_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/chat_screen.xml
@@ -85,17 +85,16 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="@dimen/_12sdp"
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/user_mokup_dark"
         android:drawablePadding="10dp"
         android:hint="Type some nice things"
         android:imeOptions="actionDone"
         android:importantForAutofill="no"
         android:inputType="text"
-        android:backgroundTint="#353535"
         android:paddingStart="@dimen/_16sdp"
         android:paddingEnd="@dimen/_16sdp"
-        android:textColor="@color/black"
-        android:textColorHint="#4A4A4A"
+        android:textColor="@color/white"
+        android:textColorHint="#AFAFAFAF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/sendButton"
         app:layout_constraintStart_toStartOf="parent" />
