--- a/KetchUPClient/app/src/main/res/layout-port-night/item_friends.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/item_friends.xml
@@ -57,13 +57,11 @@
 
     <View
         android:id="@+id/topDivider"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginStart="200dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/friendName"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
