--- a/KetchUPClient/app/src/main/res/layout/settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/settings_screen.xml
@@ -20,7 +20,7 @@
         android:paddingStart="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/white"
+        android:textColor="@color/dark_color"
         app:layout_constraintEnd_toEndOf="@+id/newPassField"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/newPassField"
@@ -41,7 +41,7 @@
         android:paddingStart="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
-        android:textColor="@color/white"
+        android:textColor="@color/dark_color"
         app:layout_constraintEnd_toEndOf="@+id/actualPassField"
         app:layout_constraintStart_toStartOf="@+id/actualPassField"
         app:layout_constraintTop_toBottomOf="@+id/actualPassField"
@@ -60,11 +60,10 @@
         android:hint="Please type your actual password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColor="@color/white"
+        android:textColor="@color/dark_color"
         android:textColorHint="#4A4A4A"
-        app:layout_constraintEnd_toEndOf="@+id/actualPassText"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/actualPassText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actualPassText"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
@@ -77,7 +76,9 @@
         android:text="Here you can change the password"
         android:textColor="@color/dark_color"
         android:textSize="@dimen/_13sdp"
-        app:layout_constraintStart_toStartOf="@+id/passwordText"
+        app:layout_constraintEnd_toEndOf="@+id/actualPassField"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/actualPassField"
         app:layout_constraintTop_toBottomOf="@+id/passwordText" />
 
     <TextView
@@ -129,6 +130,7 @@
         android:scaleType="center"
         app:layout_constraintBottom_toBottomOf="@id/changeStatus"
         app:layout_constraintEnd_toEndOf="@+id/settingsText"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/settingsText"
         app:layout_constraintTop_toBottomOf="@+id/nameText"
         app:riv_mutate_background="true"
@@ -171,7 +173,7 @@
         android:textColorHint="#B1B1B1"
         android:textSize="@dimen/_16sdp"
         app:layout_constraintBottom_toBottomOf="@id/ViewSupp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/actualPassField"
         app:layout_constraintStart_toEndOf="@id/ViewSupp"
         app:layout_constraintTop_toBottomOf="@+id/nameText"
         app:layout_constraintVertical_bias="0.0"
@@ -192,7 +194,7 @@
         android:textColor="#676767"
         android:textColorHint="#9F9F9F"
         android:textSize="@dimen/_16sdp"
-        app:layout_constraintEnd_toEndOf="@+id/changeName"
+        app:layout_constraintEnd_toEndOf="@+id/actualPassField"
         app:layout_constraintStart_toStartOf="@+id/changeName"
         app:layout_constraintTop_toBottomOf="@+id/statusText"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -202,7 +204,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/patua_one"
         android:text="@string/settingText"
         android:textColor="@color/dark_color"
@@ -219,16 +221,16 @@
         android:text="Password"
         android:textColor="@color/dark_color"
         android:textSize="@dimen/_20sdp"
-        app:layout_constraintEnd_toEndOf="@+id/settingsText"
-        app:layout_constraintStart_toStartOf="@+id/settingsText"
+        app:layout_constraintEnd_toEndOf="@+id/actualPassText"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/actualPassText"
         app:layout_constraintTop_toBottomOf="@+id/changePFP" />
 
     <Button
         android:id="@+id/applyButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="30dp"
         android:backgroundTint="#EF5252"
         android:fontFamily="@font/patua_one"
         android:text="Apply changes"
@@ -236,8 +238,8 @@
         android:textSize="@dimen/_10sdp"
         app:iconTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/changeStatus"
-        app:layout_constraintStart_toStartOf="@+id/changePFP"
+        app:layout_constraintEnd_toEndOf="@+id/repeatNewPassField"
+        app:layout_constraintStart_toStartOf="@+id/repeatNewPassField"
         app:layout_constraintTop_toBottomOf="@+id/repeatNewPassField"
         tools:ignore="TextContrastCheck" />
 
