UI now more effitient, with a lot of trash cleaned. Added HTTP text for dev config

--- a/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/activity_register_screen.xml
@@ -13,14 +13,15 @@
         android:layout_height="53dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Please repeat your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#AFAFAF"
         android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
@@ -35,14 +36,15 @@
         android:layout_height="53dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#AFAFAF"
         android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
@@ -58,14 +60,15 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/username_icon_light"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_user"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your username"
         android:inputType="textNoSuggestions"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#AFAFAF"
         android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
@@ -100,7 +103,7 @@
         app:layout_constraintHorizontal_bias="0.118"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/ketchup_logo" />
 
     <TextView
         android:id="@+id/singnupText"
