--- a/KetchUPClient/app/src/main/res/layout-night/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-night/activity_register_screen.xml
@@ -12,14 +12,15 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Please repeat your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#AFAFAF"
         android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/passwordSingField"
@@ -33,14 +34,15 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#AFAFAF"
         android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordRepSignField"
@@ -56,14 +58,15 @@
         android:layout_height="57dp"
         android:layout_marginTop="120dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/username_icon_light"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_user"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your username"
         android:inputType="textEmailAddress"
         android:paddingStart="10dp"
-        android:textColorHint="#4A4A4A"
+        android:textColorHint="#AFAFAF"
         android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/passwordSingField"
@@ -115,6 +118,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/ketchup_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
