--- a/KetchUPClient/app/src/main/res/layout-port-night/debug_settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/debug_settings_screen.xml
@@ -25,14 +25,13 @@
         android:layout_height="57dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
-        android:background="@drawable/user_mokup_dark"
+        android:background="@drawable/text_field_dark"
         android:ems="10"
         android:fontFamily="@font/patua_one"
-        android:hint="http://XX.X.X.X:XXXX"
         android:inputType="textPersonName"
         android:paddingStart="@dimen/_10sdp"
-        android:text=""
-        android:textColor="@color/dark_color"
+        android:text="http://"
+        android:textColor="#AFAFAF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/devText"
         app:layout_constraintTop_toBottomOf="@+id/devText" />
