--- a/KetchUPClient/app/src/main/res/layout-port-night/settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/settings_screen.xml
@@ -14,8 +14,9 @@
         android:layout_width="350dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/lock_icon_ligh"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/patua_one"
@@ -23,7 +24,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColor="@color/white"
-        android:textColorHint="#FFAFAFAF"
+        android:textColorHint="#AFAFAF"
         app:layout_constraintEnd_toEndOf="@+id/newPassField"
         app:layout_constraintStart_toStartOf="@+id/newPassField"
         app:layout_constraintTop_toBottomOf="@+id/newPassField"
@@ -34,14 +35,15 @@
         android:layout_width="350dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/lock_icon_ligh"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Please type the new password"
         android:inputType="textPassword"
         android:paddingStart="10dp"
-        android:textColorHint="#FFAFAFAF"
+        android:textColorHint="#AFAFAF"
         android:fontFamily="@font/patua_one"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/actualPassField"
@@ -54,8 +56,9 @@
         android:layout_width="350dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/lock_icon_ligh"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/patua_one"
@@ -63,7 +66,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColor="@color/white"
-        android:textColorHint="#FFAFAFAF"
+        android:textColorHint="#AFAFAF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/actualPassText"
