--- a/KetchUPClient/app/src/main/res/layout-land-night/settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/settings_screen.xml
@@ -12,8 +12,9 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/lock_icon_ligh"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/patua_one"
@@ -21,7 +22,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColor="@color/white"
-        android:textColorHint="#FFAFAFAF"
+        android:textColorHint="#AFAFAF"
         app:layout_constraintEnd_toEndOf="@+id/newPassField"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/newPassField"
@@ -33,8 +34,9 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/lock_icon_ligh"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/patua_one"
@@ -42,7 +44,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColor="@color/white"
-        android:textColorHint="#FFAFAFAF"
+        android:textColorHint="#AFAFAF"
         app:layout_constraintEnd_toEndOf="@+id/actualPassField"
         app:layout_constraintStart_toStartOf="@+id/actualPassField"
         app:layout_constraintTop_toBottomOf="@+id/actualPassField"
@@ -53,8 +55,9 @@
         android:layout_width="340dp"
         android:layout_height="53dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/user_mokup_dark"
-        android:drawableStart="@drawable/lock_icon_ligh"
+        android:background="@drawable/text_field_dark"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="#AFAFAF"
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/patua_one"
@@ -62,7 +65,7 @@
         android:inputType="textPassword"
         android:paddingStart="10dp"
         android:textColor="@color/white"
-        android:textColorHint="#FFAFAFAF"
+        android:textColorHint="#AFAFAF"
         app:layout_constraintEnd_toEndOf="@+id/actualPassText"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/actualPassText"
