--- a/KetchUPClient/app/src/main/res/layout-land/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land/activity_register_screen.xml
@@ -12,8 +12,9 @@
         android:layout_height="53dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="@color/dark_color"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Please repeat your password"
@@ -33,8 +34,9 @@
         android:layout_height="53dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="@color/dark_color"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your password"
@@ -55,8 +57,8 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="10dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/username_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_user"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your username"
@@ -95,7 +97,7 @@
         app:layout_constraintHorizontal_bias="0.118"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/ketchup_logo" />
 
     <TextView
         android:id="@+id/singnupText"
