--- a/KetchUPClient/app/src/main/res/layout-land/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land/login_screen.xml
@@ -12,8 +12,9 @@
         android:layout_height="53dp"
         android:layout_marginTop="20dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="@color/dark_color"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Password"
@@ -34,8 +35,8 @@
         android:layout_height="57dp"
         android:layout_marginTop="100dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/username_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_user"
         android:drawablePadding="10dp"
         android:textColorHint="#4A4A4A"
         android:fontFamily="@font/patua_one"
@@ -99,6 +100,6 @@
         app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/ketchup_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
