--- a/KetchUPClient/app/src/main/res/layout/activity_register_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/activity_register_screen.xml
@@ -12,8 +12,9 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="@color/dark_color"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Please repeat your password"
@@ -32,8 +33,9 @@
         android:layout_width="0dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="@color/dark_color"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your password"
@@ -54,8 +56,8 @@
         android:layout_height="57dp"
         android:layout_marginTop="120dp"
         android:autofillHints=""
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/username_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_user"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Choose your username"
@@ -110,6 +112,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/ketchup_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
