--- a/KetchUPClient/app/src/main/res/layout/chat_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/chat_screen.xml
@@ -67,7 +67,8 @@
         android:layout_height="@dimen/_43sdp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:background="@drawable/user_pfp_mokup"
+        android:background="@drawable/ic_user"
+        android:backgroundTint="#7E7E7E"
         android:bottomRightRadius="@dimen/_24sdp"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +85,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="@dimen/_12sdp"
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/text_field_light"
         android:drawablePadding="10dp"
         android:hint="Type some nice things"
         android:imeOptions="actionDone"
@@ -111,7 +112,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/inputMessage"
         app:maxImageSize="@dimen/_25sdp"
-        app:srcCompat="@drawable/send_button_ic"
+        app:srcCompat="@drawable/ic_send"
         app:tint="@color/dark_color"
         tools:ignore="SpeakableTextPresentCheck" />
 
