--- a/KetchUPClient/app/src/main/res/layout/debug_settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/debug_settings_screen.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/patua_one"
         android:text="Here you can put the url"
+        android:textColor="@color/dark_color"
         android:textSize="@dimen/_15sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,13 +24,12 @@
         android:layout_height="57dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="30dp"
-        android:background="@drawable/user_mokup"
+        android:background="@drawable/text_field_light"
         android:ems="10"
         android:fontFamily="@font/patua_one"
-        android:hint="http://XX.X.X.X:XXXX"
         android:inputType="textPersonName"
         android:paddingStart="@dimen/_10sdp"
-        android:text=""
+        android:text="http://"
         android:textColor="@color/dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/devText"
