--- a/KetchUPClient/app/src/main/res/layout/settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/settings_screen.xml
@@ -11,8 +11,9 @@
         android:layout_width="350dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="@color/dark_color"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Please repeat your new password"
@@ -32,8 +33,9 @@
         android:layout_width="350dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="@color/dark_color"
         android:drawablePadding="10dp"
         android:ems="10"
         android:hint="Please type the new password"
@@ -52,8 +54,9 @@
         android:layout_width="350dp"
         android:layout_height="53dp"
         android:layout_marginTop="30dp"
-        android:background="@drawable/user_mokup"
-        android:drawableStart="@drawable/password_icon_light"
+        android:background="@drawable/text_field_light"
+        android:drawableStart="@drawable/ic_password"
+        android:drawableTint="@color/dark_color"
         android:drawablePadding="10dp"
         android:ems="10"
         android:fontFamily="@font/patua_one"
