parametrized server url

--- a/KetchUPClient/app/src/main/res/layout/debug_settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/debug_settings_screen.xml
@@ -27,9 +27,9 @@
         android:background="@drawable/text_field_light"
         android:ems="10"
         android:fontFamily="@font/patua_one"
+        android:hint="http://127.0.0.1"
         android:inputType="textPersonName"
         android:paddingStart="@dimen/_10sdp"
-        android:text="http://"
         android:textColor="@color/dark_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/devText"
