added some validator errors to login screen

--- a/KetchUPClient/app/src/main/res/layout-port-night/debug_settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/debug_settings_screen.xml
@@ -28,9 +28,9 @@
         android:background="@drawable/text_field_dark"
         android:ems="10"
         android:fontFamily="@font/patua_one"
+        android:hint="http://127.0.0.1"
         android:inputType="textPersonName"
         android:paddingStart="@dimen/_10sdp"
-        android:text="http://"
         android:textColor="#AFAFAF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/devText"
