--- a/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
@@ -106,5 +106,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ketchup_logo" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/devButton"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_40sdp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="10dp"
+        android:clickable="true"
+        android:outlineAmbientShadowColor="@color/dark_color"
+        android:outlineSpotShadowColor="@color/dark_color"
+        app:backgroundTint="@color/dark_color"
+        app:borderWidth="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_dev_settings"
+        app:tint="#D6D6D6"
+        tools:ignore="SpeakableTextPresentCheck" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
