--- a/KetchUPClient/app/src/main/res/layout/debug_settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/debug_settings_screen.xml
@@ -12,7 +12,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/patua_one"
-        android:text="Here you can put the url"
+        android:text="Here you can put the ip"
         android:textColor="@color/dark_color"
         android:textSize="@dimen/_15sdp"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:background="@drawable/text_field_light"
         android:ems="10"
         android:fontFamily="@font/patua_one"
-        android:hint="http://127.0.0.1"
+        android:hint="127.0.0.1"
         android:inputType="textPersonName"
         android:paddingStart="@dimen/_10sdp"
         android:textColor="@color/dark_color"
