--- a/KetchUPClient/app/src/main/res/layout/add_users.xml
+++ b/KetchUPClient/app/src/main/res/layout/add_users.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:padding="@dimen/_8sdp">
 
     <EditText
         android:id="@+id/searchUserField"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="10dp"
         android:autofillHints=""
         android:background="@drawable/text_field_light"
         android:ems="10"
@@ -20,24 +20,22 @@
         android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/searchUserButton"
         app:layout_constraintEnd_toStartOf="@+id/searchUserButton"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/userPFP"
         app:layout_constraintTop_toTopOf="@+id/searchUserButton" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/searchUserButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="200dp"
         android:clickable="true"
         android:outlineAmbientShadowColor="@color/white"
         android:outlineSpotShadowColor="@color/white"
         app:backgroundTint="#FFFFFF"
         app:borderWidth="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/backButton"
+        app:layout_constraintTop_toBottomOf="@+id/userStatus"
+        app:layout_constraintVertical_bias="0.060000002"
         app:maxImageSize="@dimen/_25sdp"
         app:srcCompat="@drawable/ic_user_search"
         tools:ignore="SpeakableTextPresentCheck" />
@@ -46,15 +44,137 @@
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="140dp"
+        android:layout_marginBottom="30dp"
         android:backgroundTint="#EF5252"
         android:fontFamily="@font/patua_one"
         android:text="Add friend"
         android:textColor="@color/white"
         android:textSize="@dimen/_10sdp"
         app:iconTint="#FFFFFF"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/searchUserButton"
         app:layout_constraintStart_toStartOf="@+id/searchUserField"
-        app:layout_constraintTop_toBottomOf="@+id/searchUserField"
         tools:ignore="TextContrastCheck" />
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/userPFP"
+        android:layout_width="@dimen/_43sdp"
+        android:layout_height="@dimen/_43sdp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:background="#B5B5B5"
+        android:scaleType="center"
+        app:layout_constraintBottom_toBottomOf="@+id/backButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:riv_mutate_background="true"
+        app:riv_oval="true"
+        tools:ignore="ImageContrastCheck" />
+
+    <View
+        android:id="@+id/ViewSupp"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toBottomOf="@+id/userPFP"
+        app:layout_constraintTop_toTopOf="@id/userPFP"
+        app:layout_constraintStart_toEndOf="@id/userPFP"/>
+
+    <TextView
+        android:id="@+id/textName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_marginEnd="10dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/patua_one"
+        android:maxLines="1"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="@color/dark_color"
+        android:textSize="@dimen/_16sdp"
+        app:layout_constraintBottom_toBottomOf="@id/ViewSupp"
+        app:layout_constraintEnd_toStartOf="@+id/backButton"
+        app:layout_constraintStart_toEndOf="@id/ViewSupp" />
+
+    <TextView
+        android:id="@+id/userStatus"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/patua_one"
+        android:maxLines="1"
+        android:text=""
+        android:textAlignment="center"
+        android:textColor="#676767"
+        android:textSize="@dimen/_10sdp"
+        app:layout_constraintEnd_toStartOf="@+id/backButton"
+        app:layout_constraintStart_toStartOf="@+id/textName"
+        app:layout_constraintTop_toBottomOf="@+id/textName" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:contentDescription="@string/app_name"
+        android:outlineAmbientShadowColor="@color/white"
+        android:outlineSpotShadowColor="@color/white"
+        android:src="@drawable/ic_back"
+        app:backgroundTint="#FFFFFF"
+        app:maxImageSize="@dimen/_25sdp"
+        app:borderWidth="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/textName"
+        app:layout_constraintTop_toTopOf="@id/textName"
+        app:tint="@color/dark_color" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/_25sdp"
+        android:layout_height="@dimen/_25sdp"
+        android:layout_gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginBottom="10dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/addButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/searchUserField">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/usersRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:orientation="vertical"
+            android:visibility="visible"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+
+        <TextView
+            android:id="@+id/errorMessage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/_24sdp"
+            android:layout_marginEnd="@dimen/_24sdp"
+            android:fontFamily="@font/patua_one"
+            android:gravity="center"
+            android:textColor="@color/dark_color"
+            android:textSize="@dimen/_12sdp"
+            android:visibility="gone" />
+
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
