--- a/KetchUPClient/app/src/main/res/layout-port-night/chat_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-port-night/chat_screen.xml
@@ -70,6 +70,9 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/ic_user"
         android:backgroundTint="#7E7E7E"
+        android:outlineSpotShadowColor="@color/dark_color"
+        android:outlineAmbientShadowColor="@color/dark_color"
+        app:riv_border_width="0dp"
         android:bottomRightRadius="@dimen/_24sdp"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
