--- a/KetchUPClient/app/src/main/res/layout/chat_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/chat_screen.xml
@@ -69,6 +69,9 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/ic_user"
         android:backgroundTint="#7E7E7E"
+        android:outlineSpotShadowColor="@color/white"
+        android:outlineAmbientShadowColor="@color/white"
+        app:riv_border_width="0dp"
         android:bottomRightRadius="@dimen/_24sdp"
         android:scaleType="fitCenter"
         app:layout_constraintStart_toStartOf="parent"
