--- a/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout-land-night/login_screen.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:background="@color/dark_color"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".LoginScreen">
 
     <EditText
