--- a/KetchUPClient/app/src/main/res/layout/settings_screen.xml
+++ b/KetchUPClient/app/src/main/res/layout/settings_screen.xml
@@ -233,6 +233,7 @@
         android:id="@+id/applyButton"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="30dp"
         android:backgroundTint="#EF5252"
         android:fontFamily="@font/patua_one"
