--- a/KetchUPClient/app/src/main/res/values-night/themes.xml
+++ b/KetchUPClient/app/src/main/res/values-night/themes.xml
@@ -4,18 +4,20 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">#353535</item>
         <item name="colorPrimaryVariant">@color/dark_color</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/dark_color</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/dark_color</item>
+        <item name="colorSecondaryVariant">@color/dark_color</item>
+        <item name="colorOnSecondary">@color/dark_color</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/dark_color</item>
+        <item name="android:navigationBarColor">@color/dark_color</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="splashScreenTheme" parent="Theme.MaterialComponents.DayNight">
         <item name="android:windowBackground">@drawable/splash_image_dark</item>
-        <item name="android:navigationBarColor" tools:targetApi="lollipop">@android:color/transparent</item>
-        <item name="android:statusBarColor" tools:targetApi="lollipop">@color/dark_color</item>
+        <item name="android:navigationBarColor">@color/dark_color</item>
+        <item name="android:statusBarColor">@color/dark_color</item>
     </style>
 </resources>
